--- a/面试题.md
+++ b/面试题.md
@@ -1,3 +1,42 @@
 ### 初级题目
++ go中的引用类型：
+  + 切片，map，channel，interface，函数
++ new和make的区别：
+  + 适用范围：make只能创建内建类型(slice，map，channel)， new则是可以对所有类型进行内存分配
+  + 返回值： new返回指针， make返回引用
+  + 填充值： new 填充零值， make 填充非零值
++ 异常触发的情况有哪些：
+  + 空指针解析，下标越界，除数为0，调用panic函数
++ cap()和len()函数的区别是什么？
+  + len()返回切片中的元素个数。
+  + cap()返回切片的容量即切片可以容纳的元素数量。
++ cap函数的适用类型：
+  + array，slice，channel。 （注：map不可以使用cap）
++ 切片和数组的差异：
+  + 数组大小是固定的，切片大小不是。在运行时可以动态地增加或减少切片的大小，但数组不可以。在go中，数组是切片的底层实现。
++ 多个defer出现的时候，defer的执行顺序：
+  + 根据defer出现的逆序执行
+  
++ 进程、线程、协程之间的区别：
+说说go语言的channel特性？
+A. 给一个 nil channel 发送数据，造成永远阻塞
+B. 从一个 nil channel 接收数据，造成永远阻塞
+C. 给一个已经关闭的 channel 发送数据，引起 panic
+D. 从一个已经关闭的 channel 接收数据，如果缓冲区中为空，则返回一个零值
+E. 无缓冲的channel是同步的，而有缓冲的channel是非同步的
+
+5. select与switch的区别
+6. go的channel的理解
+
+垃圾回收
+常用的垃圾回收主要有引用计数，标记-清除，分代收集，三色标记
+go用的是三色标记。
+首先创建三个集合：白、灰、黑。
+将所有对象放入白色集合中。
+然后从根节点开始遍历所有对象（注意这里并不递归遍历），把遍历到的对象从白色集合放入灰色集合。
+之后遍历灰色集合，将灰色对象引用的对象从白色集合放入灰色集合，之后将此灰色对象放入黑色集合
+重复 4 直到灰色中无任何对象
+重复以上操作
+收集所有白色对象（垃圾）
 ### 中级题目
 ### 高级题目
