--- a/面试题.md
+++ b/面试题.md
@@ -1,10 +1,14 @@
 ### 初级题目
-+ go中的引用类型：
-  + 切片，map，channel，interface，函数
-+ new和make的区别：
-  + 适用范围：make只能创建内建类型(slice，map，channel)， new则是可以对所有类型进行内存分配
-  + 返回值： new返回指针， make返回引用
-  + 填充值： new 填充零值， make 填充非零值
+```
+go中的引用类型：
+   切片，map，channel，interface，函数
+```
+```
+new和make的区别：
+  适用范围：make只能创建内建类型(slice，map，channel)， new则是可以对所有类型进行内存分配
+  返回值： new返回指针， make返回引用
+  填充值： new 填充零值， make 填充非零值
+```
 + 异常触发的情况有哪些：
   + 空指针解析，下标越界，除数为0，调用panic函数
 + cap()和len()函数的区别是什么？
