--- a/面试题.md
+++ b/面试题.md
@@ -30,7 +30,12 @@ cap函数的适用类型：
 多个defer出现的时候，defer的执行顺序：
   根据defer出现的逆序执行
 ```
-  
+
+```
+短变量声明的使用场景：
+   只可用于函数体内部
+```
+   
 ```
 进程、线程、协程之间的区别：
 ```
@@ -48,8 +53,44 @@ select与switch的区别
 
 
 ### 中级题目
-### 高级题目
 ```
+init函数的作用有哪些？
+   init()函数会在每个包完成初始化后自动执行，而且执行优先级比main函数高。init函数通常用来：
+   1. 初始化变量
+   2. 注册
+   3. 检查/修复程序的状态
+   4. 运行一次计算
+init函数的特性：
+   1. init函数不需要传入参数，也没有返回值。
+   2. 与main函数相比，init没有被声明，所以不能被其他函数调用，在main函数执行之前自动执行
+   3. 每个包可以有多个init函数，每个包的源文件也可以有多个init函数
+   4. 同一个包中的多个init函数的执行顺序没有明确定义，但是不同包的init函数是由包导入的依赖关系决定的。
+
+   如果只想使用执行某个包的init函数，可以使用import _ "/包名"的格式，防止产生编译错误
+``` 
+```
+包的初始化顺序：
+   初始化总是以单线程执行，按照包的依赖关系顺序执行，这通过go的运行时系统控制，初始化顺序：
+   1. 初始化导入的包（递归导入）
+   2. 对包块中声明的变量进行计算和分配初始值
+   3. 执行包中的init函数
+```
+```
+类型断言的作用：
+   将接口类型的值（x）转化成类型（T），格式为 x.(T);
+   value, ok :=x.(T)
+类型断言的条件：x必须是接口类型，非接口类型不能做类型断言。
+T可以是非接口类型，如果想断言合法，T必须实现x的接口
+T也可以是接口类型，则x的动态类型也应该实现接口T
+接口变量的类型也可以使用特殊形式的swtich检查：
+   swich x.(type){
+   case bool:
+   ...
+   }
+```
+   
+### 高级题目
+
 垃圾回收方法
 常用的垃圾回收主要有引用计数，标记-清除，分代收集，三色标记
 go用的是三色标记。
