--- a/面试题.md
+++ b/面试题.md
@@ -2,6 +2,8 @@
 ```
 go中的引用类型：
    切片，map，channel，interface，函数
+值类型：
+   数组，基础数据结构，结构体
 ```
 ```
 new和make的区别：
@@ -17,8 +19,7 @@ new和make的区别：
 cap()和len()函数的区别是什么？
   len()返回切片中的元素个数。
   cap()返回切片的容量即切片可以容纳的元素数量。
-```
-```
+  
 cap函数的适用类型：
   array，slice，channel。 （注：map不可以使用cap）
 ```
@@ -27,8 +28,20 @@ cap函数的适用类型：
   数组大小是固定的，切片大小不是。在运行时可以动态地增加或减少切片的大小，但数组不可以。在go中，数组是切片的底层实现。
 ```
 ```
+字典Map：
+
+哪些类型不能做字典的键：
+   函数，字典，切片。 （因为键的类型必须支持判等操作）
+如果向一个值为nil的字典中添加元素，会报什么错？
+   会抛一个panic
+```
+```
+Go有继承吗？如何实现的继承？
+   go没有继承，通过嵌入字段实现了类型之间的组合。
+```
+```
 多个defer出现的时候，defer的执行顺序：
-  根据defer出现的逆序执行
+ defer函数调用的执行顺序与他们所属的defer语句出现的顺序相反。
 ```
 
 ```
@@ -39,6 +52,7 @@ cap函数的适用类型：
 ```
 进程、线程、协程之间的区别：
 ```
+
 ```
 channel有哪些特性？
    给一个 nil channel 发送数据，造成永远阻塞
@@ -53,6 +67,12 @@ select与switch的区别
 
 
 ### 中级题目
+```
+主协程等待其他协程结束的方法：
+   1. time.sleep()
+   2. 通道
+   3. sync.WaitGroup
+```
 ```
 init函数的作用有哪些？
    init()函数会在每个包完成初始化后自动执行，而且执行优先级比main函数高。init函数通常用来：
@@ -88,8 +108,62 @@ T也可以是接口类型，则x的动态类型也应该实现接口T
    ...
    }
 ```
+```
+类型别名与类型声明的区别：
+语法：
+   type D = int // 类型别名：有一个等号
+   type I int   // 类型声明
+区别：
+   类型别名和原类型一样，只是另一种叫法。二者可以当作同一种类型。别名只是在源码中存在，编译完成后，不会有别名类型。
+   类型定义和原类型是不同的两个类型，他们之间不可以进行类型转换，他们的值之间也不能进行判等或比较，他们的变量也不能互相赋值。
+```
+```
+切片扩容：
+   <1024: 原长度*2;
+   >1024: 原长度*1.25
+```
+```
+值方法和指针方法的区别
+   （方法的接收者必须是某个自定义的数据类型，且不能是接口类型或接口的指针类型）
+   1. 一个方法的接受类型是所属类型的指针类型，就可以称此方法为指针方法
+   2. 如果接受类型是所属类型本身，此方法叫做值方法。
+   3. 值方法的修改不会体现在原值上，除非这个类型本身是某个引用类型（比如切片，map）的别名类型
+   4. 指针方法的修改会体现在原值上。
    
+Note： 
+   自定义数据类型的方法集合仅有值方法。
+   某个类型的指针类型的方法集合=值方法+指针方法
+   但go会适时的进行转译，所以在值上也能调用指针方法
+```
+```
+struct{}:
+   空结构体，不占用内存空间。但是有结构体的一切属性，例如可以绑定方法，可以写入channel。
+```
 ### 高级题目
+```
+contianer包中的容器，List与Ring（循环链表）的区别：
+   1. ring的数据结构由它中级代表，而list需要由它以及Element类型联合表示
+   2. 一个ring值只代表其所属循环链表中的一个元素，一个List类型的值代表了一个完整的链表
+   3. Ring一旦被创建，长度不可改变
+Element{
+   next, prev *Element // 节点前后的元素
+   list *List          // Element所属的list
+   value interface{}   // Element存储的值
+}
+List{
+   root Element
+   len int
+}
+```
+```
+goroutine的调度模型：
+   通过GPM调度模型实现：
+   Go的调度器内部有四个重要的结构：M，P，S，Sched。
+   M:M代表内核级线程，一个M就是一个线程，goroutine就是跑在M之上的；M是一个很大的结构，里面维护小对象内存cache（mcache）、当前执行的goroutine、随机数发生器等等非常多的信息
+   G:代表一个goroutine，它有自己的栈，instruction pointer和其他信息（正在等待的channel等等），用于调度。
+   P:P全称是Processor，处理器，它的主要用途就是用来执行goroutine的，所以它也维护了一个goroutine队列，里面存储了所有需要它来执行的goroutine
+   Sched：代表调度器，它维护有存储M和G的队列以及调度器的一些状态信息等。
+```
 
 垃圾回收方法
 常用的垃圾回收主要有引用计数，标记-清除，分代收集，三色标记
