--- a/面试题.md
+++ b/面试题.md
@@ -6,10 +6,20 @@ go中的引用类型：
    数组，基础数据结构，结构体
 ```
 ```
+slice
+https://zhuanlan.zhihu.com/p/61121325
+```
+```
+map
+https://www.cnblogs.com/qcrao-2018/p/10903807.html
+```
+```
 new和make的区别：
-  适用范围：make只能创建内建类型(slice，map，channel)， new则是可以对所有类型进行内存分配
+  适用范围：make只能创建内建类型(slice，map，channel，因为它们都指向底层数据结构，都需要为底层数据结构分配好内存并初始化)， 
+          new则是可以对所有类型进行内存分配
   返回值： new返回指针， make返回引用
   填充值： new 填充零值， make 填充非零值
+  make()比new()多一些操作，new()只会进行内存分配并做默认的赋0初始化。（例：用make创建slice，make()可以先为底层数组分配好内存，然后从这个底层数组中再额外生成一个slice并初始化。
 ```
 ```
 异常触发的情况有哪些：
