--- a/面试题.md
+++ b/面试题.md
@@ -50,6 +50,9 @@ Go有继承吗？如何实现的继承？
    go没有继承，通过嵌入字段实现了类型之间的组合。
 ```
 ```
+Defer
+https://mp.weixin.qq.com/s?__biz=MzI2MDA1MTcxMg==&mid=2648466918&idx=2&sn=151a8135f22563b7b97bf01ff480497b&chksm=f2474389c530ca9f3dc2ae1124e4e5ed3db4c45096924265bccfcb8908a829b9207b0dd26047&scene=21#wechat_redirect
+
 多个defer出现的时候，defer的执行顺序：
  defer函数调用的执行顺序与他们所属的defer语句出现的顺序相反。
 ```
