--- a/面试题.md
+++ b/面试题.md
@@ -180,6 +180,7 @@ List{
 ```
 ```
 goroutine的调度模型：
+https://studygolang.com/articles/20991
    通过GPM调度模型实现：
    Go的调度器内部有四个重要的结构：M，P，S，Sched。
    M:M代表内核级线程，一个M就是一个线程，goroutine就是跑在M之上的；M是一个很大的结构，里面维护小对象内存cache（mcache）、当前执行的goroutine、随机数发生器等等非常多的信息
@@ -188,6 +189,7 @@ goroutine的调度模型：
    Sched：代表调度器，它维护有存储M和G的队列以及调度器的一些状态信息等。
 ```
 
+```
 垃圾回收方法
 常用的垃圾回收主要有引用计数，标记-清除，分代收集，三色标记
 go用的是三色标记。
@@ -198,4 +200,10 @@ go用的是三色标记。
 重复 4 直到灰色中无任何对象
 重复以上操作
 收集所有白色对象（垃圾）
+```
+```
+Go语言局部变量分配在栈还是堆？
+
+Go语言编译器会自动决定把一个变量放在栈还是放在堆，编译器会做逃逸分析，
+当发现变量的作用域没有跑出函数范围，就可以在栈上，反之则必须分配在堆。
 ```
